# glstudyc

./: CMakeLists.txt  errors.c  errors.h  glad.c  glad.h  main.c  point.frag  point.vert
